--- a/index.html
+++ b/index.html
@@ -580,6 +580,7 @@
   <section id="home" class="hero">
     <div class="container">
       <div class="hero-content">
+        <img src="vis.jpg" alt="Vishnu Teja" class="img-fluid rounded-circle">
         <img src="assets/img/vis.jpg" alt="Vishnu Teja Revuri" class="hero-img">
         <h1>Vishnu Teja Revuri</h1>
         <p>I'm a <span class="typed-text">Data Analyst</span></p>
@@ -895,3 +896,4 @@
 </body>
 
 </html>
+
