--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 
       <div class="row align-items-center">
         <div class="col-lg-5">
-          <img src="assets/img/vis.jpg" alt="Vishnu Teja Revuri" class="img-fluid about-img">
+          <img src="vis.jpg" alt="Vishnu Teja Revuri" class="img-fluid about-img">
         </div>
         <div class="col-lg-7">
           <div class="about-content">
@@ -895,5 +895,6 @@
 </body>
 
 </html>
+
 
 
