--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
             <a class="nav-link" href="#achievements">Certifications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-primary text-white ms-lg-2" href="assets/pdf/teja.pdf"
+            <a class="nav-link btn btn-primary text-white ms-lg-2" href="Vishnu_Teja_Revuri_Resume.pdf"
               target="_blank">Download CV</a>
           </li>
         </ul>
@@ -895,6 +895,7 @@
 </body>
 
 </html>
+
 
 
 
